--- a/test/nonconvex/Test Nonconvex 10-10.ipynb
+++ b/test/nonconvex/Test Nonconvex 10-10.ipynb
@@ -8779,9 +8779,362 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "df5a28e0-6390-494f-9562-dcde8f4da081",
+   "metadata": {},
+   "source": [
+    "### STE Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4b4869e5-c7be-4ce7-8c3c-09227ecf29f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a48f926d-6e86-4864-880a-dbc018a647fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 16            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "945b5c61-9397-43ac-9c5e-4b741f24b68c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmQuadratic\n",
+    "from src.func.layer import netFC\n",
+    "from src.func import roundSTEModel\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_ineq, outsize=num_var, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"b\"], [\"x\"], name=\"smap\")\n",
+    "# define rounding model\n",
+    "rnd = roundSTEModel(param_keys=[\"b\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
+    "loss_fn = nmQuadratic([\"b\", \"x_rnd\"], num_var, num_ineq, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e4a0e9dd-bb15-4e62-8654-9a48a0f9a632",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 253.56\n",
+      "Epoch 1, Validation Loss: 108.38\n",
+      "Epoch 2, Validation Loss: 20.31\n",
+      "Epoch 3, Validation Loss: 5.15\n",
+      "Epoch 4, Validation Loss: 4.24\n",
+      "Epoch 5, Validation Loss: 4.20\n",
+      "Epoch 6, Validation Loss: 3.94\n",
+      "Epoch 7, Validation Loss: 3.94\n",
+      "Epoch 8, Validation Loss: 3.90\n",
+      "Epoch 9, Validation Loss: 3.96\n",
+      "Epoch 10, Validation Loss: 3.84\n",
+      "Epoch 11, Validation Loss: 3.59\n",
+      "Epoch 12, Validation Loss: 3.51\n",
+      "Epoch 13, Validation Loss: 3.40\n",
+      "Epoch 14, Validation Loss: 3.48\n",
+      "Epoch 15, Validation Loss: 2.96\n",
+      "Epoch 16, Validation Loss: 2.70\n",
+      "Epoch 17, Validation Loss: 2.04\n",
+      "Epoch 18, Validation Loss: 2.02\n",
+      "Epoch 19, Validation Loss: 1.69\n",
+      "Epoch 20, Validation Loss: 1.71\n",
+      "Epoch 21, Validation Loss: 1.63\n",
+      "Epoch 22, Validation Loss: 1.82\n",
+      "Epoch 23, Validation Loss: 1.46\n",
+      "Epoch 24, Validation Loss: 1.62\n",
+      "Epoch 25, Validation Loss: 1.50\n",
+      "Epoch 26, Validation Loss: 1.57\n",
+      "Epoch 27, Validation Loss: 1.49\n",
+      "Epoch 28, Validation Loss: 1.42\n",
+      "Epoch 29, Validation Loss: 1.59\n",
+      "Epoch 30, Validation Loss: 1.65\n",
+      "Epoch 31, Validation Loss: 1.63\n",
+      "Epoch 32, Validation Loss: 1.36\n",
+      "Epoch 33, Validation Loss: 1.58\n",
+      "Epoch 34, Validation Loss: 1.62\n",
+      "Epoch 35, Validation Loss: 1.28\n",
+      "Epoch 36, Validation Loss: 1.42\n",
+      "Epoch 37, Validation Loss: 1.46\n",
+      "Epoch 38, Validation Loss: 1.36\n",
+      "Epoch 39, Validation Loss: 1.38\n",
+      "Epoch 40, Validation Loss: 1.48\n",
+      "Epoch 41, Validation Loss: 1.32\n",
+      "Epoch 42, Validation Loss: 1.35\n",
+      "Epoch 43, Validation Loss: 1.34\n",
+      "Epoch 44, Validation Loss: 1.46\n",
+      "Epoch 45, Validation Loss: 1.27\n",
+      "Epoch 46, Validation Loss: 1.36\n",
+      "Epoch 47, Validation Loss: 1.45\n",
+      "Epoch 48, Validation Loss: 1.30\n",
+      "Epoch 49, Validation Loss: 1.31\n",
+      "Epoch 50, Validation Loss: 1.36\n",
+      "Epoch 51, Validation Loss: 1.37\n",
+      "Epoch 52, Validation Loss: 1.25\n",
+      "Epoch 53, Validation Loss: 1.27\n",
+      "Epoch 54, Validation Loss: 1.11\n",
+      "Epoch 55, Validation Loss: 1.36\n",
+      "Epoch 56, Validation Loss: 1.03\n",
+      "Epoch 57, Validation Loss: 1.35\n",
+      "Epoch 58, Validation Loss: 1.28\n",
+      "Epoch 59, Validation Loss: 1.18\n",
+      "Epoch 60, Validation Loss: 1.05\n",
+      "Epoch 61, Validation Loss: 0.97\n",
+      "Epoch 62, Validation Loss: 0.82\n",
+      "Epoch 63, Validation Loss: 0.58\n",
+      "Epoch 64, Validation Loss: 0.55\n",
+      "Epoch 65, Validation Loss: 0.23\n",
+      "Epoch 66, Validation Loss: 0.19\n",
+      "Epoch 67, Validation Loss: 0.08\n",
+      "Epoch 68, Validation Loss: 0.09\n",
+      "Epoch 69, Validation Loss: 0.13\n",
+      "Epoch 70, Validation Loss: 0.04\n",
+      "Epoch 71, Validation Loss: -0.03\n",
+      "Epoch 72, Validation Loss: -0.11\n",
+      "Epoch 73, Validation Loss: -0.07\n",
+      "Epoch 74, Validation Loss: -0.06\n",
+      "Epoch 75, Validation Loss: 0.00\n",
+      "Epoch 76, Validation Loss: -0.02\n",
+      "Epoch 77, Validation Loss: -0.25\n",
+      "Epoch 78, Validation Loss: -0.18\n",
+      "Epoch 79, Validation Loss: -0.35\n",
+      "Epoch 80, Validation Loss: -0.30\n",
+      "Epoch 81, Validation Loss: -0.29\n",
+      "Epoch 82, Validation Loss: -0.21\n",
+      "Epoch 83, Validation Loss: -0.35\n",
+      "Epoch 84, Validation Loss: -0.17\n",
+      "Epoch 85, Validation Loss: -0.23\n",
+      "Epoch 86, Validation Loss: -0.35\n",
+      "Epoch 87, Validation Loss: -0.26\n",
+      "Epoch 88, Validation Loss: -0.23\n",
+      "Epoch 89, Validation Loss: -0.31\n",
+      "Epoch 90, Validation Loss: -0.13\n",
+      "Epoch 91, Validation Loss: -0.32\n",
+      "Epoch 92, Validation Loss: -0.17\n",
+      "Epoch 93, Validation Loss: -0.37\n",
+      "Epoch 94, Validation Loss: -0.33\n",
+      "Epoch 95, Validation Loss: -0.30\n",
+      "Epoch 96, Validation Loss: -0.31\n",
+      "Epoch 97, Validation Loss: -0.37\n",
+      "Epoch 98, Validation Loss: -0.19\n",
+      "Epoch 99, Validation Loss: -0.40\n",
+      "Epoch 100, Validation Loss: -0.47\n",
+      "Epoch 101, Validation Loss: -0.43\n",
+      "Epoch 102, Validation Loss: -0.41\n",
+      "Epoch 103, Validation Loss: -0.28\n",
+      "Epoch 104, Validation Loss: -0.44\n",
+      "Epoch 105, Validation Loss: -0.50\n",
+      "Epoch 106, Validation Loss: -0.44\n",
+      "Epoch 107, Validation Loss: -0.50\n",
+      "Epoch 108, Validation Loss: -0.49\n",
+      "Epoch 109, Validation Loss: -0.37\n",
+      "Epoch 110, Validation Loss: -0.19\n",
+      "Epoch 111, Validation Loss: -0.33\n",
+      "Epoch 112, Validation Loss: -0.56\n",
+      "Epoch 113, Validation Loss: -0.60\n",
+      "Epoch 114, Validation Loss: -0.39\n",
+      "Epoch 115, Validation Loss: -0.43\n",
+      "Epoch 116, Validation Loss: -0.42\n",
+      "Epoch 117, Validation Loss: -0.35\n",
+      "Epoch 118, Validation Loss: -0.60\n",
+      "Epoch 119, Validation Loss: -0.47\n",
+      "Epoch 120, Validation Loss: -0.36\n",
+      "Epoch 121, Validation Loss: -0.42\n",
+      "Epoch 122, Validation Loss: -0.54\n",
+      "Epoch 123, Validation Loss: -0.44\n",
+      "Epoch 124, Validation Loss: -0.47\n",
+      "Epoch 125, Validation Loss: -0.48\n",
+      "Epoch 126, Validation Loss: -0.47\n",
+      "Epoch 127, Validation Loss: -0.46\n",
+      "Epoch 128, Validation Loss: -0.44\n",
+      "Epoch 129, Validation Loss: -0.40\n",
+      "Epoch 130, Validation Loss: -0.32\n",
+      "Epoch 131, Validation Loss: -0.55\n",
+      "Epoch 132, Validation Loss: -0.46\n",
+      "Epoch 133, Validation Loss: -0.60\n",
+      "Epoch 134, Validation Loss: -0.42\n",
+      "Epoch 135, Validation Loss: -0.52\n",
+      "Epoch 136, Validation Loss: -0.47\n",
+      "Epoch 137, Validation Loss: -0.52\n",
+      "Epoch 138, Validation Loss: -0.40\n",
+      "Epoch 139, Validation Loss: -0.54\n",
+      "Epoch 140, Validation Loss: -0.51\n",
+      "Epoch 141, Validation Loss: -0.53\n",
+      "Epoch 142, Validation Loss: -0.43\n",
+      "Epoch 143, Validation Loss: -0.47\n",
+      "Epoch 144, Validation Loss: -0.47\n",
+      "Epoch 145, Validation Loss: -0.48\n",
+      "Epoch 146, Validation Loss: -0.44\n",
+      "Epoch 147, Validation Loss: -0.39\n",
+      "Epoch 148, Validation Loss: -0.27\n",
+      "Epoch 149, Validation Loss: -0.42\n",
+      "Epoch 150, Validation Loss: -0.53\n",
+      "Epoch 151, Validation Loss: -0.54\n",
+      "Epoch 152, Validation Loss: -0.56\n",
+      "Epoch 153, Validation Loss: -0.65\n",
+      "Epoch 154, Validation Loss: -0.59\n",
+      "Epoch 155, Validation Loss: -0.67\n",
+      "Epoch 156, Validation Loss: -0.64\n",
+      "Epoch 157, Validation Loss: -0.64\n",
+      "Epoch 158, Validation Loss: -0.64\n",
+      "Epoch 159, Validation Loss: -0.67\n",
+      "Epoch 160, Validation Loss: -0.71\n",
+      "Epoch 161, Validation Loss: -0.56\n",
+      "Epoch 162, Validation Loss: -0.56\n",
+      "Epoch 163, Validation Loss: -0.45\n",
+      "Epoch 164, Validation Loss: -0.51\n",
+      "Epoch 165, Validation Loss: -0.56\n",
+      "Epoch 166, Validation Loss: -0.56\n",
+      "Epoch 167, Validation Loss: -0.63\n",
+      "Epoch 168, Validation Loss: -0.44\n",
+      "Epoch 169, Validation Loss: -0.61\n",
+      "Epoch 170, Validation Loss: -0.58\n",
+      "Epoch 171, Validation Loss: -0.66\n",
+      "Epoch 172, Validation Loss: -0.65\n",
+      "Epoch 173, Validation Loss: -0.67\n",
+      "Epoch 174, Validation Loss: -0.65\n",
+      "Epoch 175, Validation Loss: -0.70\n",
+      "Epoch 176, Validation Loss: -0.58\n",
+      "Epoch 177, Validation Loss: -0.54\n",
+      "Epoch 178, Validation Loss: -0.69\n",
+      "Epoch 179, Validation Loss: -0.73\n",
+      "Epoch 180, Validation Loss: -0.77\n",
+      "Epoch 181, Validation Loss: -0.60\n",
+      "Epoch 182, Validation Loss: -0.74\n",
+      "Epoch 183, Validation Loss: -0.65\n",
+      "Epoch 184, Validation Loss: -0.86\n",
+      "Epoch 185, Validation Loss: -0.67\n",
+      "Epoch 186, Validation Loss: -0.61\n",
+      "Epoch 187, Validation Loss: -0.75\n",
+      "Epoch 188, Validation Loss: -0.70\n",
+      "Epoch 189, Validation Loss: -0.75\n",
+      "Epoch 190, Validation Loss: -0.75\n",
+      "Epoch 191, Validation Loss: -0.73\n",
+      "Epoch 192, Validation Loss: -0.90\n",
+      "Epoch 193, Validation Loss: -0.83\n",
+      "Epoch 194, Validation Loss: -0.64\n",
+      "Epoch 195, Validation Loss: -0.78\n",
+      "Epoch 196, Validation Loss: -0.77\n",
+      "Epoch 197, Validation Loss: -0.76\n",
+      "Epoch 198, Validation Loss: -0.65\n",
+      "Epoch 199, Validation Loss: -0.80\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 215.04 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6a456ac8-d1e9-498d-9ddb-5170ebbad46b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 262.30it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean     3.880158               0.0      0.001328\n",
+      "std      1.561432               0.0      0.000464\n",
+      "min      1.568533               0.0      0.000504\n",
+      "25%      2.732493               0.0      0.001003\n",
+      "50%      3.559565               0.0      0.001123\n",
+      "75%      4.588102               0.0      0.001510\n",
+      "max      8.849227               0.0      0.003027\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.heuristic import naive_round\n",
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"b\":b.cpu().numpy()})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x\"]\n",
+    "    for i in range(num_var):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval_rel, _ = model.get_val()\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    params.append(list(b.cpu().numpy()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/nc_st_10-10.csv\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b4869e5-c7be-4ce7-8c3c-09227ecf29f5",
+   "id": "2f3867cc-7d36-4e0b-ad0b-b47600e7654a",
    "metadata": {},
    "outputs": [],
    "source": []
