--- a/test/nonconvex/Test Nonconvex 100-100.ipynb
+++ b/test/nonconvex/Test Nonconvex 100-100.ipynb
@@ -7556,6 +7556,223 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0216f8a9-732b-4512-8e34-13ff016ddaba",
+   "metadata": {},
+   "source": [
+    "### STE Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e901ed77-72e7-438a-aaa1-859a1878a644",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6d58fa56-20d6-4ec2-b17c-f256b31a136f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 16            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e2df767a-bf4e-422c-a8c0-a07fbd9f2e9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmQuadratic\n",
+    "from src.func.layer import netFC\n",
+    "from src.func import roundSTEModel\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_ineq, outsize=num_var, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"b\"], [\"x\"], name=\"smap\")\n",
+    "# define rounding model\n",
+    "rnd = roundSTEModel(param_keys=[\"b\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
+    "loss_fn = nmQuadratic([\"b\", \"x_rnd\"], num_var, num_ineq, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2c4e0de1-8f6d-4eb7-8d4c-4aa6495e6123",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 2485.01\n",
+      "Epoch 1, Validation Loss: 49.42\n",
+      "Epoch 2, Validation Loss: 4.36\n",
+      "Epoch 3, Validation Loss: 1.43\n",
+      "Epoch 4, Validation Loss: -1.41\n",
+      "Epoch 5, Validation Loss: -3.71\n",
+      "Epoch 6, Validation Loss: -6.00\n",
+      "Epoch 7, Validation Loss: -7.08\n",
+      "Epoch 8, Validation Loss: -8.11\n",
+      "Epoch 9, Validation Loss: -9.06\n",
+      "Epoch 10, Validation Loss: -9.43\n",
+      "Epoch 11, Validation Loss: -9.25\n",
+      "Epoch 12, Validation Loss: -9.97\n",
+      "Epoch 13, Validation Loss: -9.17\n",
+      "Epoch 14, Validation Loss: -10.31\n",
+      "Epoch 15, Validation Loss: -10.05\n",
+      "Epoch 16, Validation Loss: -10.12\n",
+      "Epoch 17, Validation Loss: -10.79\n",
+      "Epoch 18, Validation Loss: -10.45\n",
+      "Epoch 19, Validation Loss: -10.87\n",
+      "Epoch 20, Validation Loss: -10.40\n",
+      "Epoch 21, Validation Loss: -10.50\n",
+      "Epoch 22, Validation Loss: -10.22\n",
+      "Epoch 23, Validation Loss: -10.52\n",
+      "Epoch 24, Validation Loss: -10.54\n",
+      "Epoch 25, Validation Loss: -9.30\n",
+      "Epoch 26, Validation Loss: -10.27\n",
+      "Epoch 27, Validation Loss: -10.66\n",
+      "Epoch 28, Validation Loss: -10.10\n",
+      "Epoch 29, Validation Loss: -10.52\n",
+      "Epoch 30, Validation Loss: -10.07\n",
+      "Epoch 31, Validation Loss: -10.52\n",
+      "Epoch 32, Validation Loss: -10.21\n",
+      "Epoch 33, Validation Loss: -9.93\n",
+      "Epoch 34, Validation Loss: -10.68\n",
+      "Epoch 35, Validation Loss: -10.32\n",
+      "Epoch 36, Validation Loss: -10.39\n",
+      "Epoch 37, Validation Loss: -10.14\n",
+      "Epoch 38, Validation Loss: -10.01\n",
+      "Epoch 39, Validation Loss: -10.92\n",
+      "Epoch 40, Validation Loss: -10.79\n",
+      "Epoch 41, Validation Loss: -10.40\n",
+      "Epoch 42, Validation Loss: -10.60\n",
+      "Epoch 43, Validation Loss: -10.97\n",
+      "Epoch 44, Validation Loss: -10.44\n",
+      "Epoch 45, Validation Loss: -10.58\n",
+      "Epoch 46, Validation Loss: -10.73\n",
+      "Epoch 47, Validation Loss: -10.48\n",
+      "Epoch 48, Validation Loss: -10.30\n",
+      "Epoch 49, Validation Loss: -10.63\n",
+      "Epoch 50, Validation Loss: -10.24\n",
+      "Epoch 51, Validation Loss: -10.30\n",
+      "Epoch 52, Validation Loss: -10.61\n",
+      "Epoch 53, Validation Loss: -10.15\n",
+      "Epoch 54, Validation Loss: -10.65\n",
+      "Epoch 55, Validation Loss: -10.23\n",
+      "Epoch 56, Validation Loss: -10.29\n",
+      "Epoch 57, Validation Loss: -10.93\n",
+      "Epoch 58, Validation Loss: -10.24\n",
+      "Epoch 59, Validation Loss: -10.48\n",
+      "Epoch 60, Validation Loss: -10.49\n",
+      "Epoch 61, Validation Loss: -10.91\n",
+      "Epoch 62, Validation Loss: -10.46\n",
+      "Early stopping at epoch 62\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 63.32 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7ae37c02-9c39-4c83-b3a1-07672d0b3122",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:03<00:00, 26.31it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean    22.359921               0.0      0.001749\n",
+      "std      1.666412               0.0      0.000685\n",
+      "min     19.420712               0.0      0.000987\n",
+      "25%     21.250445               0.0      0.001002\n",
+      "50%     22.090053               0.0      0.001971\n",
+      "75%     23.257534               0.0      0.002017\n",
+      "max     28.694403               0.0      0.003882\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.heuristic import naive_round\n",
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"b\":b.cpu().numpy()})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x\"]\n",
+    "    for i in range(num_var):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval_rel, _ = model.get_val()\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    params.append(list(b.cpu().numpy()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/nc_st_100-100.csv\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "43de7d14-db30-433a-9c70-02a6f4583f31",
