--- a/test/nonconvex/Test Nonconvex 200-200.ipynb
+++ b/test/nonconvex/Test Nonconvex 200-200.ipynb
@@ -835,9 +835,217 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a869a1cd-3436-49d9-b2c7-c1037c154dc9",
+   "metadata": {},
+   "source": [
+    "### STE Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e3d970f7-d46e-4280-8cf9-6783018f2559",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "370720c9-da3c-4c02-b37b-d05c3f3ec309",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 16            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c7fcc802-2f1d-411b-bab0-988d84e4c2bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmQuadratic\n",
+    "from src.func.layer import netFC\n",
+    "from src.func import roundSTEModel\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_ineq, outsize=num_var, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"b\"], [\"x\"], name=\"smap\")\n",
+    "# define rounding model\n",
+    "rnd = roundSTEModel(param_keys=[\"b\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
+    "loss_fn = nmQuadratic([\"b\", \"x_rnd\"], num_var, num_ineq, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6043395e-1395-4533-b700-6e49b46d7b4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 5004.20\n",
+      "Epoch 1, Validation Loss: 240.90\n",
+      "Epoch 2, Validation Loss: 6.62\n",
+      "Epoch 3, Validation Loss: -0.59\n",
+      "Epoch 4, Validation Loss: -7.12\n",
+      "Epoch 5, Validation Loss: -12.77\n",
+      "Epoch 6, Validation Loss: -16.38\n",
+      "Epoch 7, Validation Loss: -19.77\n",
+      "Epoch 8, Validation Loss: -20.77\n",
+      "Epoch 9, Validation Loss: -21.48\n",
+      "Epoch 10, Validation Loss: -22.44\n",
+      "Epoch 11, Validation Loss: -23.62\n",
+      "Epoch 12, Validation Loss: -22.95\n",
+      "Epoch 13, Validation Loss: -24.06\n",
+      "Epoch 14, Validation Loss: -24.20\n",
+      "Epoch 15, Validation Loss: -24.51\n",
+      "Epoch 16, Validation Loss: -24.20\n",
+      "Epoch 17, Validation Loss: -25.13\n",
+      "Epoch 18, Validation Loss: -23.85\n",
+      "Epoch 19, Validation Loss: -24.36\n",
+      "Epoch 20, Validation Loss: -24.31\n",
+      "Epoch 21, Validation Loss: -24.59\n",
+      "Epoch 22, Validation Loss: -24.85\n",
+      "Epoch 23, Validation Loss: -24.17\n",
+      "Epoch 24, Validation Loss: -25.26\n",
+      "Epoch 25, Validation Loss: -25.18\n",
+      "Epoch 26, Validation Loss: -24.44\n",
+      "Epoch 27, Validation Loss: -24.62\n",
+      "Epoch 28, Validation Loss: -25.29\n",
+      "Epoch 29, Validation Loss: -25.61\n",
+      "Epoch 30, Validation Loss: -24.27\n",
+      "Epoch 31, Validation Loss: -24.79\n",
+      "Epoch 32, Validation Loss: -24.39\n",
+      "Epoch 33, Validation Loss: -24.27\n",
+      "Epoch 34, Validation Loss: -25.63\n",
+      "Epoch 35, Validation Loss: -24.26\n",
+      "Epoch 36, Validation Loss: -25.59\n",
+      "Epoch 37, Validation Loss: -25.47\n",
+      "Epoch 38, Validation Loss: -24.68\n",
+      "Epoch 39, Validation Loss: -24.58\n",
+      "Epoch 40, Validation Loss: -24.72\n",
+      "Epoch 41, Validation Loss: -24.58\n",
+      "Epoch 42, Validation Loss: -24.99\n",
+      "Epoch 43, Validation Loss: -24.61\n",
+      "Epoch 44, Validation Loss: -24.03\n",
+      "Epoch 45, Validation Loss: -24.59\n",
+      "Epoch 46, Validation Loss: -24.99\n",
+      "Epoch 47, Validation Loss: -25.00\n",
+      "Epoch 48, Validation Loss: -24.61\n",
+      "Epoch 49, Validation Loss: -24.87\n",
+      "Epoch 50, Validation Loss: -25.32\n",
+      "Epoch 51, Validation Loss: -24.98\n",
+      "Epoch 52, Validation Loss: -24.37\n",
+      "Epoch 53, Validation Loss: -25.52\n",
+      "Early stopping at epoch 53\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 50.38 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "174fb341-4b63-444a-b6b9-4a1ab2c231e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:13<00:00,  7.65it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean    46.770966               0.0      0.002237\n",
+      "std      2.395742               0.0      0.001222\n",
+      "min     41.627415               0.0      0.000990\n",
+      "25%     45.375845               0.0      0.001587\n",
+      "50%     46.664422               0.0      0.002009\n",
+      "75%     47.832128               0.0      0.002511\n",
+      "max     55.029455               0.0      0.010712\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.heuristic import naive_round\n",
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for b in tqdm(data_test.datadict[\"b\"][:100]):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"b\":b.cpu().numpy()})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x\"]\n",
+    "    for i in range(num_var):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval_rel, _ = model.get_val()\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    params.append(list(b.cpu().numpy()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/nc_st_200-200.csv\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d386ad9-6a0c-4af0-b790-07ebbfeed752",
+   "id": "31632f78-7857-4911-9546-525db7ede10d",
    "metadata": {},
    "outputs": [],
    "source": []
